--- a/_config.yml
+++ b/_config.yml
@@ -272,9 +272,11 @@ defaults:
       comments: true
       share: true
       related: true
+      toc: true
   # _pages
   - scope:
       path: ""
       type: pages
     values:
       layout: single
+      toc: true
